<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_imc"
        android:id="@+id/btnIMC"
        android:drawableLeft="@drawable/icone_saude">

    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_media"
        android:id="@+id/btnMedia"
        android:drawableLeft="@drawable/icone_media">

    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_nomes"
        android:id="@+id/btnNomes"
        android:drawableLeft="@drawable/icone_nomes">

    </Button>
</LinearLayout>